[package]
name = "mandelbulb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = "0.2.3"
glutin = "0.32.1"
glutin-winit = "0.5.0"
winit = "0.30.5"

[build-dependencies]
gl_generator = "0.14.0"
cfg_aliases = "0.2.1"
